--- a/index.html
+++ b/index.html
@@ -6,3 +6,28 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts.css">
   </head>
+  <body>
+     <section class="wrapper">
+       <header class="header">
+         <div class="logo"></div>
+         <nav class="menu__models">
+           <a class="menu__models_item menu__models_item_active" href="#">Model S</a>
+           <a class="menu__models_item" href="#">Model X</a>
+           <a class="menu__models_item" href="#">Model 3</a>
+           <a class="menu__models_item" href="#">Roadster</a>
+           <a class="menu__models_item" href="#">Energy</a>
+         </nav>
+         <nav class="menu__shop">
+           <a class="menu__shop_item" href="#">Магазин</a>
+           <a class="menu__shop_item" href="#">Войти</a>
+           <div class="menu__mobile"></div>
+          </nav>
+       </header>
+  <section class="main">
+    <h1 class="models">Model S</h1>
+    <p class="welcome">Добро пожаловать в будущее!</p>
+    <img class="car" src="img/tesla_car.svg" alt="">
+    <a class="test_drive">Заказать</a>
+  </section>
+     </section>
+  </body>
