--- a/index.html
+++ b/index.html
@@ -27,7 +27,38 @@
     <h1 class="models">Model S</h1>
     <p class="welcome">Добро пожаловать в будущее!</p>
     <img class="car" src="img/tesla_car.svg" alt="">
-    <a class="test_drive">Заказать</a>
+    <footer class="footer">
+      <div class="speed"></div>
+      <div class="test__img"></div>
+    <a class="button" href="#">ЗАКАЗАТЬ</a>
+    </footer>
+  </section>
+  <section class="future">
+    <div class="future__block">
+      <h1 class="future__driving">Будущее вождения</h1>
+      <p class="future__text">Модель S обладат лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей.
+      Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука,
+      сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
+      <div class="display"></div>
+      <div class="wifi"></div>
+      <div class="bag"></div>
+      <a class="future__block_info">УЗНАТЬ БОЛЬШЕ</a>
+      <a class="future__block_order">ЗАКАЗАТЬ</a>
+    </div>
+  </section>
+  <section class="safety">
+    <div class="safety__block">
+      <h1 class="safety__car">Самый безопасный автомобиль в мире</h1>
+      <p class="safety__text">Модель S достигла наивысшей оценки безопастности любого автомобиля, когда-либо испытанного,
+        и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом,
+        заднем сидении и в ДТП с переворотом авто.</p>
+      <h1 class="header__safety_stars">Оценка защиты:</h1>
+        <p class="first">СПЕРЕДИ</p>
+        <p class="second">СБОКУ</p>
+        <p class="third">СБОКУ (стойка)</p>
+        <p class="fourth">ВОДИТЕЛЬ</p>
+        <p class="fiveth">ПАССАЖИР</p>
+    </div>
   </section>
      </section>
   </body>
