--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <a class="button" href="#">ЗАКАЗАТЬ</a>
     </footer>
   </section>
+  <div class="arrow"></div>
   <section class="future">
     <div class="future__block">
       <h1 class="future__driving">Будущее вождения</h1>
@@ -47,18 +48,52 @@
     </div>
   </section>
   <section class="safety">
-    <div class="safety__block">
+    <img class="car__safety" src="img/carframe.svg" alt="">
+      <div class="safety__block">
       <h1 class="safety__car">Самый безопасный автомобиль в мире</h1>
       <p class="safety__text">Модель S достигла наивысшей оценки безопастности любого автомобиля, когда-либо испытанного,
         и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом,
         заднем сидении и в ДТП с переворотом авто.</p>
       <h1 class="header__safety_stars">Оценка защиты:</h1>
-        <p class="first">СПЕРЕДИ</p>
-        <p class="second">СБОКУ</p>
-        <p class="third">СБОКУ (стойка)</p>
-        <p class="fourth">ВОДИТЕЛЬ</p>
-        <p class="fiveth">ПАССАЖИР</p>
-    </div>
-  </section>
+        <h3 class="first">СПЕРЕДИ
+          <div class="first__one stars"></div>
+          <div class="first__two stars"></div>
+          <div class="first__three stars"></div>
+          <div class="first__four stars"></div>
+          <div class="first__five stars"></div>
+        </h3>
+        <h3 class="second">СБОКУ
+          <div class="second__one stars"></div>
+          <div class="second__two stars"></div>
+          <div class="second__three stars"></div>
+          <div class="second__four stars"></div>
+          <div class="second__five stars"></div>
+        </h3>
+        <h3 class="third">СБОКУ (стойка)
+          <div class="third__one stars"></div>
+          <div class="third__two stars"></div>
+          <div class="third__three stars"></div>
+          <div class="third__four stars"></div>
+          <div class="third__five stars"></div>
+        </h3>
+        <h3 class="fourth">ВОДИТЕЛЬ
+          <div class="fourth__one stars"></div>
+          <div class="fourth__two stars"></div>
+          <div class="fourth__three stars"></div>
+          <div class="fourth__four stars"></div>
+          <div class="fourth__five stars"></div>
+        </h3>
+        <h3 class="fiveth">ПАССАЖИР
+          <div class="fiveth__one stars"></div>
+          <div class="fiveth__two stars"></div>
+          <div class="fiveth__three stars"></div>
+          <div class="fiveth__four stars"></div>
+          <div class="fiveth__five stars"></div>
+        </h3>
+        <div class="five__stars"></div>
+        <a class="safety__block_info">УЗНАТЬ БОЛЬШЕ</a>
+        <a class="safety__block_order">ЗАКАЗАТЬ</a>
+        </div>
+    </section>
      </section>
   </body>
