--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Mikola_TESLA</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts.css">
+    <meta name="viewport" content="width=device-width">
   </head>
   <body>
      <section class="wrapper">
@@ -21,79 +22,79 @@
            <a class="menu__shop_item" href="#">Магазин</a>
            <a class="menu__shop_item" href="#">Войти</a>
            <div class="menu__mobile"></div>
-          </nav>
+         </nav>
        </header>
-  <section class="main">
-    <h1 class="models">Model S</h1>
-    <p class="welcome">Добро пожаловать в будущее!</p>
-    <img class="car" src="img/tesla_car.svg" alt="">
-    <footer class="footer">
-      <div class="speed"></div>
-      <div class="test__img"></div>
-    <a class="button" href="#">ЗАКАЗАТЬ</a>
-    </footer>
-  </section>
-  <div class="arrow"></div>
-  <section class="future">
-    <div class="future__block">
-      <h1 class="future__driving">Будущее вождения</h1>
-      <p class="future__text">Модель S обладат лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей.
-      Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука,
-      сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
-      <div class="display"></div>
-      <div class="wifi"></div>
-      <div class="bag"></div>
-      <a class="future__block_info">УЗНАТЬ БОЛЬШЕ</a>
-      <a class="future__block_order">ЗАКАЗАТЬ</a>
-    </div>
-  </section>
-  <section class="safety">
-    <img class="car__safety" src="img/carframe.svg" alt="">
-      <div class="safety__block">
-      <h1 class="safety__car">Самый безопасный автомобиль в мире</h1>
-      <p class="safety__text">Модель S достигла наивысшей оценки безопастности любого автомобиля, когда-либо испытанного,
-        и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом,
-        заднем сидении и в ДТП с переворотом авто.</p>
-      <h1 class="header__safety_stars">Оценка защиты:</h1>
-        <h3 class="first">СПЕРЕДИ
-          <div class="first__one stars"></div>
-          <div class="first__two stars"></div>
-          <div class="first__three stars"></div>
-          <div class="first__four stars"></div>
-          <div class="first__five stars"></div>
-        </h3>
-        <h3 class="second">СБОКУ
-          <div class="second__one stars"></div>
-          <div class="second__two stars"></div>
-          <div class="second__three stars"></div>
-          <div class="second__four stars"></div>
-          <div class="second__five stars"></div>
-        </h3>
-        <h3 class="third">СБОКУ (стойка)
-          <div class="third__one stars"></div>
-          <div class="third__two stars"></div>
-          <div class="third__three stars"></div>
-          <div class="third__four stars"></div>
-          <div class="third__five stars"></div>
-        </h3>
-        <h3 class="fourth">ВОДИТЕЛЬ
-          <div class="fourth__one stars"></div>
-          <div class="fourth__two stars"></div>
-          <div class="fourth__three stars"></div>
-          <div class="fourth__four stars"></div>
-          <div class="fourth__five stars"></div>
-        </h3>
-        <h3 class="fiveth">ПАССАЖИР
-          <div class="fiveth__one stars"></div>
-          <div class="fiveth__two stars"></div>
-          <div class="fiveth__three stars"></div>
-          <div class="fiveth__four stars"></div>
-          <div class="fiveth__five stars"></div>
-        </h3>
-        <div class="five__stars"></div>
-        <a class="safety__block_info">УЗНАТЬ БОЛЬШЕ</a>
-        <a class="safety__block_order">ЗАКАЗАТЬ</a>
-        </div>
-    </section>
+       <section class="main">
+         <h1 class="main__title">Model S</h1>
+         <p class="main__text">Добро пожаловать в будущее!</p>
+         <img class="main__img" src="img/tesla_car.svg" alt="">
+         <article class="main__info">
+           <div class="main__info_speed"></div>
+           <div class="main__info_test"></div>
+           <a class="main__info_button" href="#">ЗАКАЗАТЬ</a>
+         </article>
+         <div class="main__arrow"></div>
+       </section>
+       <section class="future">
+         <div class="future__info">
+           <h1 class="future__info_title">Будущее вождения</h1>
+           <p class="future__info_description">Модель S обладат лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей.
+             Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука,
+             сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
+           <div class="future__info_display"></div>
+           <div class="future__info_wifi"></div>
+           <div class="future__info_bag"></div>
+           <a class="future__info_more">УЗНАТЬ БОЛЬШЕ</a>
+           <a class="future__info_order">ЗАКАЗАТЬ</a>
+         </div>
+       </section>
+       <section class="safety">
+         <img class="safety__img" src="img/carframe.svg" alt="">
+         <div class="safety__info">
+           <h1 class="safety__info_title">Самый безопасный автомобиль в мире</h1>
+           <p class="safety__info_description">Модель S достигла наивысшей оценки безопастности любого автомобиля, когда-либо испытанного,
+             и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом,
+             заднем сидении и в ДТП с переворотом авто.</p>
+           <h1 class="safety__info_protection_title">Оценка защиты:</h1>
+           <h3 class="info__protection_front">СПЕРЕДИ
+             <div class="protection__front_one stars"></div>
+             <div class="protection__front_two stars"></div>
+             <div class="protection__front_three stars"></div>
+             <div class="protection__front_four stars"></div>
+             <div class="protection__front_five stars"></div>
+           </h3>
+           <h3 class="info__protection_side">СБОКУ
+             <div class="protection__side_one stars"></div>
+             <div class="protection__side_two stars"></div>
+             <div class="protection__side_three stars"></div>
+             <div class="protection__side_four stars"></div>
+             <div class="protection__side_five stars"></div>
+           </h3>
+           <h3 class="info__protection_side_rack">СБОКУ (стойка)
+             <div class="protection__side_rack_one stars"></div>
+             <div class="protection__side_rack_two stars"></div>
+             <div class="protection__side_rack_three stars"></div>
+             <div class="protection__side_rack_four stars"></div>
+             <div class="protection__side_rack_five stars"></div>
+           </h3>
+           <h3 class="info__protection_driver">ВОДИТЕЛЬ
+             <div class="protection__driver_one stars"></div>
+             <div class="protection__driver_two stars"></div>
+             <div class="protection__driver_three stars"></div>
+             <div class="protection__driver_four stars"></div>
+             <div class="protection__driver_five stars"></div>
+           </h3>
+           <h3 class="info__protection_passenger">ПАССАЖИР
+             <div class="protection__passenger_one stars"></div>
+             <div class="protection__passenger_two stars"></div>
+             <div class="protection__passenger_three stars"></div>
+             <div class="protection__passenger_four stars"></div>
+             <div class="protection__passenger_five stars"></div>
+           </h3>
+           <div class="safety__info_result"></div>
+           <a class="safety__info_more">УЗНАТЬ БОЛЬШЕ</a>
+           <a class="safety__info__order">ЗАКАЗАТЬ</a>
+         </div>
+       </section>
      </section>
   </body>
