--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
          <div class="main__arrow"></div>
        </section>
        <section class="future">
+         <div class="future__logo-models">
+         </div>
          <div class="future__info">
            <h1 class="future__info_title">Будущее вождения</h1>
            <p class="future__info_description">Модель S обладат лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей.
@@ -50,6 +52,11 @@
        </section>
        <section class="safety">
          <img class="safety__img" src="img/carframe.svg" alt="">
+         <div class="more-safety">
+           <img class="Car_crash" src="img/Car crash.svg" alt="">
+           <img class="Protection_1" src="img/Protection 1.svg" alt="">
+           <img class="Protection_2" src="img/Protection 2.svg" alt="">
+         </div>
          <div class="safety__info">
            <h1 class="safety__info_title">Самый безопасный автомобиль в мире</h1>
            <p class="safety__info_description">Модель S достигла наивысшей оценки безопастности любого автомобиля, когда-либо испытанного,
