--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          </nav>
        </header>
        <section class="main">
-         <h1 class="main__title">Model S</h1>
+         <h1 class="main__title"></h1>
          <p class="main__text">Добро пожаловать в будущее!</p>
          <img class="main__img" src="img/tesla_car.svg" alt="">
          <article class="main__info">
