--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
      <section class="wrapper">
        <header class="header">
          <div class="logo"></div>
-         <nav class="menu__models">
-           <a class="menu__models_item menu__models_item_active" href="#">Model S</a>
-           <a class="menu__models_item" href="#">Model X</a>
-           <a class="menu__models_item" href="#">Model 3</a>
-           <a class="menu__models_item" href="#">Roadster</a>
-           <a class="menu__models_item" href="#">Energy</a>
+         <nav class="menu-models">
+           <a class="menu-models__item menu-models__item_active" href="#">Model S</a>
+           <a class="menu-models__item" href="#">Model X</a>
+           <a class="menu-models__item" href="#">Model 3</a>
+           <a class="menu-models__item" href="#">Roadster</a>
+           <a class="menu-models__item" href="#">Energy</a>
          </nav>
-         <nav class="menu__shop">
-           <a class="menu__shop_item" href="#">Магазин</a>
-           <a class="menu__shop_item" href="#">Войти</a>
-           <div class="menu__mobile"></div>
+         <nav class="menu-shop">
+           <a class="menu-shop__item" href="#">Магазин</a>
+           <a class="menu-shop__item" href="#">Войти</a>
+           <div class="menu-shop__mobile"></div>
          </nav>
        </header>
        <section class="main">
@@ -41,7 +41,7 @@
          <div class="future__info">
            <h1 class="future__info_title">Будущее вождения</h1>
            <p class="future__info_description">Модель S обладат лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей.
-             Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука,
+             Оснащена современным 17&nbsp;-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука,
              сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
            <div class="future__info_display"></div>
            <div class="future__info_wifi"></div>
