--- a/index.html
+++ b/index.html
@@ -52,51 +52,51 @@
        </section>
        <section class="safety">
          <img class="safety__img" src="img/carframe.svg" alt="">
-         <div class="more-safety">
-           <img class="Car_crash" src="img/Car crash.svg" alt="">
-           <img class="Protection_1" src="img/Protection 1.svg" alt="">
-           <img class="Protection_2" src="img/Protection 2.svg" alt="">
+         <div class="safety__img-more">
+           <img class="safety__img-more_Car-crash" src="img/Car crash.svg" alt="">
+           <img class="safety__img-more_Protection-1" src="img/Protection 1.svg" alt="">
+           <img class="safety__img-more_Protection-2" src="img/Protection 2.svg" alt="">
          </div>
          <div class="safety__info">
            <h1 class="safety__info_title">Самый безопасный автомобиль в мире</h1>
            <p class="safety__info_description">Модель S достигла наивысшей оценки безопастности любого автомобиля, когда-либо испытанного,
              и установила рекорд по наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом,
              заднем сидении и в ДТП с переворотом авто.</p>
-           <h1 class="safety__info_protection_title">Оценка защиты:</h1>
-           <h3 class="info__protection_front">СПЕРЕДИ
-             <div class="protection__front_one stars"></div>
-             <div class="protection__front_two stars"></div>
-             <div class="protection__front_three stars"></div>
-             <div class="protection__front_four stars"></div>
-             <div class="protection__front_five stars"></div>
+           <h1 class="safety__info_protection-title">Оценка защиты:</h1>
+           <h3 class="safety__info_protection-front">СПЕРЕДИ
+             <div class="protection-front__one stars"></div>
+             <div class="protection-front__two stars"></div>
+             <div class="protection-front__three stars"></div>
+             <div class="protection-front__four stars"></div>
+             <div class="protection-front__five stars"></div>
            </h3>
-           <h3 class="info__protection_side">СБОКУ
-             <div class="protection__side_one stars"></div>
-             <div class="protection__side_two stars"></div>
-             <div class="protection__side_three stars"></div>
-             <div class="protection__side_four stars"></div>
-             <div class="protection__side_five stars"></div>
+           <h3 class="safety__info_protection-side">СБОКУ
+             <div class="protection-side__one stars"></div>
+             <div class="protection-side__two stars"></div>
+             <div class="protection-side__three stars"></div>
+             <div class="protection-side__four stars"></div>
+             <div class="protection-side__five stars"></div>
            </h3>
-           <h3 class="info__protection_side_rack">СБОКУ (стойка)
-             <div class="protection__side_rack_one stars"></div>
-             <div class="protection__side_rack_two stars"></div>
-             <div class="protection__side_rack_three stars"></div>
-             <div class="protection__side_rack_four stars"></div>
-             <div class="protection__side_rack_five stars"></div>
+           <h3 class="safety__info_protection-side-rack">СБОКУ (стойка)
+             <div class="protection-side-rack__one stars"></div>
+             <div class="protection-side-rack__two stars"></div>
+             <div class="protection-side-rack__three stars"></div>
+             <div class="protection-side-rack__four stars"></div>
+             <div class="protection-side-rack__five stars"></div>
            </h3>
-           <h3 class="info__protection_driver">ВОДИТЕЛЬ
-             <div class="protection__driver_one stars"></div>
-             <div class="protection__driver_two stars"></div>
-             <div class="protection__driver_three stars"></div>
-             <div class="protection__driver_four stars"></div>
-             <div class="protection__driver_five stars"></div>
+           <h3 class="safety__info_protection-driver">ВОДИТЕЛЬ
+             <div class="protection-driver__one stars"></div>
+             <div class="protection-driver__two stars"></div>
+             <div class="protection-driver__three stars"></div>
+             <div class="protection-driver__four stars"></div>
+             <div class="protection-driver__five stars"></div>
            </h3>
-           <h3 class="info__protection_passenger">ПАССАЖИР
-             <div class="protection__passenger_one stars"></div>
-             <div class="protection__passenger_two stars"></div>
-             <div class="protection__passenger_three stars"></div>
-             <div class="protection__passenger_four stars"></div>
-             <div class="protection__passenger_five stars"></div>
+           <h3 class="safety__info_protection-passenger">ПАССАЖИР
+             <div class="protection-passenger__one stars"></div>
+             <div class="protection-passenger__two stars"></div>
+             <div class="protection-passenger__three stars"></div>
+             <div class="protection-passenger__four stars"></div>
+             <div class="protection-passenger__five stars"></div>
            </h3>
            <div class="safety__info_result"></div>
            <a class="safety__info_more">УЗНАТЬ БОЛЬШЕ</a>
