--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
        <header class="header">
          <div class="logo"></div>
          <nav class="menu-models">
-           <a class="menu-models__item menu-models__item_active" href="#">Model S</a>
-           <a class="menu-models__item" href="#">Model X</a>
-           <a class="menu-models__item" href="#">Model 3</a>
-           <a class="menu-models__item" href="#">Roadster</a>
-           <a class="menu-models__item" href="#">Energy</a>
+           <a class="menu-models__item menu-models__item_active menu-models__item1" href="#">Model S</a>
+           <a class="menu-models__item menu-models__item2" href="#">Model X</a>
+           <a class="menu-models__item menu-models__item3" href="#">Model 3</a>
+           <a class="menu-models__item menu-models__item4" href="#">Roadster</a>
+           <a class="menu-models__item menu-models__item5" href="#">Energy</a>
          </nav>
          <nav class="menu-shop">
            <a class="menu-shop__item" href="#">Магазин</a>
@@ -77,7 +77,7 @@
              <div class="protection-side__four stars"></div>
              <div class="protection-side__five stars"></div>
            </h3>
-           <h3 class="safety__info_protection-side-rack">СБОКУ (стойка)
+           <h3 class="safety__info_protection-side-rack">СБОКУ(стойка)
              <div class="protection-side-rack__one stars"></div>
              <div class="protection-side-rack__two stars"></div>
              <div class="protection-side-rack__three stars"></div>
