--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
        </section>
        <section class="safety">
          <img class="safety__img" src="img/carframe.svg" alt="">
-         <div class="safety__img-more">
-           <img class="safety__img-more_Car-crash" src="img/Car crash.svg" alt="">
-           <img class="safety__img-more_Protection-1" src="img/Protection 1.svg" alt="">
-           <img class="safety__img-more_Protection-2" src="img/Protection 2.svg" alt="">
+         <div class="img-more">
+           <img class="img-more__Car-crash" src="img/Car crash.svg" alt="">
+           <img class="img-more__Protection-1" src="img/Protection 1.svg" alt="">
+           <img class="img-more__Protection-2" src="img/Protection 2.svg" alt="">
          </div>
          <div class="safety__info">
            <h1 class="safety__info_title">Самый безопасный автомобиль в мире</h1>
