--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mikola_TESLA</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts.css">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
      <section class="wrapper">
@@ -53,9 +53,9 @@
        <section class="safety">
          <img class="safety__img" src="img/carframe.svg" alt="">
          <div class="img-more">
-           <img class="img-more__Car-crash" src="img/Car crash.svg" alt="">
-           <img class="img-more__Protection-1" src="img/Protection 1.svg" alt="">
-           <img class="img-more__Protection-2" src="img/Protection 2.svg" alt="">
+           <div class="img-more__Car-crash" src="img/Car crash.svg" alt=""></div>
+           <div class="img-more__Protection-1" src="img/Protection 1.svg" alt=""></div>
+           <div class="img-more__Protection-2" src="img/Protection 2.svg" alt=""></div>
          </div>
          <div class="safety-info">
            <h1 class="safety-info__title">Самый безопасный автомобиль в мире</h1>
