--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
          </div>
        </section>
        <section class="safety">
-         <img class="safety__img" src="img/carframe.svg" alt="">
          <div class="img-more">
+           <!--<img class="safety__img" src="img/carframe.svg" alt="">-->
            <div class="img-more__Car-crash" src="img/Car crash.svg" alt=""></div>
            <div class="img-more__Protection-1" src="img/Protection 1.svg" alt=""></div>
            <div class="img-more__Protection-2" src="img/Protection 2.svg" alt=""></div>
