--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <header class="header">
         <div class="logo"></div>
         <nav class="menu-models">
-          <a class="menu-models__item_models " href="#">Model S</a>
-          <a class="menu-models__item_modelx menu-models__item_active" href="#">Model X</a>
+          <a class="menu-models__item_models menu-models__item_active " href="#">Model S</a>
+          <a class="menu-models__item_modelx" href="#">Model X</a>
           <a class="menu-models__item_model3" href="#">Model 3</a>
           <a class="menu-models__item_roadster" href="#">Roadster</a>
           <a class="menu-models__item_energy" href="#">Energy</a>
