--- a/index.html
+++ b/index.html
@@ -24,5 +24,21 @@
         </nav>
         <div class="menu-mobile"></div>
       </header>
+      <section class="main">
+        <h1 class="main__title"></h1>
+        <p class="main__welcome">Добро пожаловать в будущее!</p>
+        <div class="main__picture"></div>
+        <div class="info">
+          <div class="info__spkm">
+            <div class="info__spkm_speed"></div>
+            <div class="info__spkm_km"></div>
+          </div>
+          <div class="info__more">
+            <div class="info__more_test"></div>
+            <a class="info__more_order" href="#">ЗАКАЗАТЬ</a>
+          </div>
+        </div>
+        <div class="arrow"></div>
+      </section>
     </section>
   </body>
