--- a/index.html
+++ b/index.html
@@ -40,5 +40,25 @@
         </div>
         <div class="arrow"></div>
       </section>
+      <section class="future">
+        <div class="future__title"></div>
+        <article class="info-models">
+          <div class="drive">
+            <h1 class="drive__title">Будущее вождения</h1>
+            <p class="drive__text">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным
+               17&nbsp;-&nbsp;дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи,
+               а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
+          </div>
+          <div class="options">
+            <div class="options__display"></div>
+            <div class="options__wifi"></div>
+            <div class="options__bag"></div>
+          </div>
+          <div class="more">
+            <a class="more__info" href="#">УЗНАТЬ БОЛЬШЕ</a>
+            <a class="more__order" href="#">ЗАКАЗАТЬ</a>
+          </div>
+        </article>
+      </section>
     </section>
   </body>
