--- a/index.html
+++ b/index.html
@@ -60,5 +60,67 @@
           </div>
         </article>
       </section>
+      <section class="safety">
+        <article class="info-safety">
+          <div class="description">
+            <h1 class="description__title">Самый безопасный автомобиль в мире</h1>
+            <p class="description__text"> Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по
+              наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
+          </div>
+          <div class="protection">
+            <div class="protection__title"></div>
+            <div class="protection__front">
+              <div class="protection__front_title">СПЕРЕДИ</div>
+              <div class="protection__front_star1"></div>
+              <div class="protection__front_star2"></div>
+              <div class="protection__front_star3"></div>
+              <div class="protection__front_star4"></div>
+              <div class="protection__front_star5"></div>
+            </div>
+            <div class="protection__side">
+              <div class="protection__side_title">СБОКУ</div>
+              <div class="protection__side_star1"></div>
+              <div class="protection__side_star2"></div>
+              <div class="protection__side_star3"></div>
+              <div class="protection__side_star4"></div>
+              <div class="protection__side_star5"></div>
+            </div>
+            <div class="protection__rack">
+              <div class="protection__rack_title">СБОКУ(стойка)</div>
+              <div class="protection__rack_star1"></div>
+              <div class="protection__rack_star2"></div>
+              <div class="protection__rack_star3"></div>
+              <div class="protection__rack_star4"></div>
+              <div class="protection__rack_star5"></div>
+            </div>
+            <div class="protection__driver">
+              <div class="protection__driver_title">ВОДИТЕЛЬ</div>
+              <div class="protection__driver_star1"></div>
+              <div class="protection__driver_star2"></div>
+              <div class="protection__driver_star3"></div>
+              <div class="protection__driver_star4"></div>
+              <div class="protection__driver_star5"></div>
+            </div>
+            <div class="protection__passangeer">
+              <div class="protection__passangeer_title">ПАССАЖИР</div>
+              <div class="protection__passangeer_star1"></div>
+              <div class="protection__passangeer_star2"></div>
+              <div class="protection__passangeer_star3"></div>
+              <div class="protection__passangeer_star4"></div>
+              <div class="protection__passangeer_star5"></div>
+            </div>
+          </div>
+          <div class="info-safety__result"></div>
+          <div class="more-safety">
+            <a class="more-safety__info" href="#">УЗНАТЬ БОЛЬШЕ</a>
+            <a class="more-safety__order" href="#">ЗАКАЗАТЬ</a>
+          </div>
+        </article>
+        <div class="safety__img">
+          <div class="safety__img_front"></div>
+          <div class="safety__img_side"></div>
+          <div class="safety__img_crash"></div>
+        </div>
+      </section>
     </section>
   </body>
