--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
           </div>
         </article>
         <div class="safety__img">
-          <div class="safety__img_front"></div>
+          <!--<div class="safety__img_front"></div>
           <div class="safety__img_side"></div>
-          <div class="safety__img_crash"></div>
+          <div class="safety__img_crash"></div>-->
         </div>
       </section>
     </section>
