--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <div class="options__bag"></div>
           </div>
           <div class="more">
+            <div class="more__icon"></div>
             <a class="more__info" href="#">УЗНАТЬ БОЛЬШЕ</a>
             <a class="more__order" href="#">ЗАКАЗАТЬ</a>
           </div>
@@ -86,7 +87,7 @@
               <div class="protection__side_star5"></div>
             </div>
             <div class="protection__rack">
-              <div class="protection__rack_title">СБОКУ(стойка)</div>
+              <div class="protection__rack_title">СБОКУ<span class="litle">(СТОЙКА)</span></div>
               <div class="protection__rack_star1"></div>
               <div class="protection__rack_star2"></div>
               <div class="protection__rack_star3"></div>
@@ -112,6 +113,7 @@
           </div>
           <div class="info-safety__result"></div>
           <div class="more-safety">
+            <div class="more-safety__icon"></div>
             <a class="more-safety__info" href="#">УЗНАТЬ БОЛЬШЕ</a>
             <a class="more-safety__order" href="#">ЗАКАЗАТЬ</a>
           </div>
