--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <article class="info-safety">
           <div class="description">
             <h1 class="description__title">Самый безопасный автомобиль в мире</h1>
-            <p class="description__text"> Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по
+            <p class="description__text"> Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-&nbsp;либо испытанного, и установила рекорд по
               наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
           </div>
           <div class="protection">
