--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <div class="arrow"></div>
       </section>
       <section class="future">
-        <div class="future__title"></div>
+        <div class="future-block">
+          <div class="future__title"></div>
+        </div>
         <article class="info-models">
           <div class="drive">
             <h1 class="drive__title">Будущее вождения</h1>
@@ -118,11 +120,9 @@
             <a class="more-safety__order" href="#">ЗАКАЗАТЬ</a>
           </div>
         </article>
-        <div class="safety__img">
-          <!--<div class="safety__img_front"></div>
-          <div class="safety__img_side"></div>
-          <div class="safety__img_crash"></div>-->
-        </div>
+        <!--<div class="test">
+          <div class="safety__img"></div>
+        </div>-->
       </section>
     </section>
   </body>
