--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="drive">
             <h1 class="drive__title">Будущее вождения</h1>
             <p class="drive__text">Модель S обладает лучшей в своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным
-               17&nbsp;-&nbsp;дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи,
+               17-&nbsp;дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создает динамику звука, сравнимую со студией звукозаписи,
                а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
           </div>
           <div class="options">
