--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
           <div class="info__more">
             <div class="info__more_test"></div>
-            <a class="info__more_order" href="#">ЗАКАЗАТЬ</a>
+            <button type="button" name="button" class="info__more_order" href="#">ЗАКАЗАТЬ</button>
           </div>
         </div>
         <div class="arrow"></div>
