--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="more">
             <div class="more__icon"></div>
             <a class="more__info" href="#">УЗНАТЬ БОЛЬШЕ</a>
-            <a class="more__order" href="#">ЗАКАЗАТЬ</a>
+            <button type="button" name="button" class="more__order" href="#">ЗАКАЗАТЬ</button>
           </div>
         </article>
       </section>
