--- a/index.html
+++ b/index.html
@@ -74,43 +74,43 @@
             <div class="protection__title"></div>
             <div class="protection__front">
               <div class="protection__front_title">СПЕРЕДИ</div>
-              <div class="protection__front_star1"></div>
-              <div class="protection__front_star2"></div>
-              <div class="protection__front_star3"></div>
-              <div class="protection__front_star4"></div>
-              <div class="protection__front_star5"></div>
+              <div class="protection__front_star1 star"></div>
+              <div class="protection__front_star2 star"></div>
+              <div class="protection__front_star3 star"></div>
+              <div class="protection__front_star4 star"></div>
+              <div class="protection__front_star5 star"></div>
             </div>
             <div class="protection__side">
               <div class="protection__side_title">СБОКУ</div>
-              <div class="protection__side_star1"></div>
-              <div class="protection__side_star2"></div>
-              <div class="protection__side_star3"></div>
-              <div class="protection__side_star4"></div>
-              <div class="protection__side_star5"></div>
+              <div class="protection__side_star1 star"></div>
+              <div class="protection__side_star2 star"></div>
+              <div class="protection__side_star3 star"></div>
+              <div class="protection__side_star4 star"></div>
+              <div class="protection__side_star5 star"></div>
             </div>
             <div class="protection__rack">
               <div class="protection__rack_title">СБОКУ<span class="litle">(СТОЙКА)</span></div>
-              <div class="protection__rack_star1"></div>
-              <div class="protection__rack_star2"></div>
-              <div class="protection__rack_star3"></div>
-              <div class="protection__rack_star4"></div>
-              <div class="protection__rack_star5"></div>
+              <div class="protection__rack_star1 star"></div>
+              <div class="protection__rack_star2 star"></div>
+              <div class="protection__rack_star3 star"></div>
+              <div class="protection__rack_star4 star"></div>
+              <div class="protection__rack_star5 star"></div>
             </div>
             <div class="protection__driver">
               <div class="protection__driver_title">ВОДИТЕЛЬ</div>
-              <div class="protection__driver_star1"></div>
-              <div class="protection__driver_star2"></div>
-              <div class="protection__driver_star3"></div>
-              <div class="protection__driver_star4"></div>
-              <div class="protection__driver_star5"></div>
+              <div class="protection__driver_star1 star"></div>
+              <div class="protection__driver_star2 star"></div>
+              <div class="protection__driver_star3 star"></div>
+              <div class="protection__driver_star4 star"></div>
+              <div class="protection__driver_star5 star"></div>
             </div>
             <div class="protection__passangeer">
               <div class="protection__passangeer_title">ПАССАЖИР</div>
-              <div class="protection__passangeer_star1"></div>
-              <div class="protection__passangeer_star2"></div>
-              <div class="protection__passangeer_star3"></div>
-              <div class="protection__passangeer_star4"></div>
-              <div class="protection__passangeer_star5"></div>
+              <div class="protection__passangeer_star1 star"></div>
+              <div class="protection__passangeer_star2 star"></div>
+              <div class="protection__passangeer_star3 star"></div>
+              <div class="protection__passangeer_star4 star"></div>
+              <div class="protection__passangeer_star5 star"></div>
             </div>
           </div>
           <div class="info-safety__result"></div>
