--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="protection">
             <div class="protection__title"></div>
             <div class="protection__front">
-              <div class="protection__front_title">СПЕРЕДИ</div>
+              <div class="protection__front_title"></div>
               <div class="protection__front_star1 star"></div>
               <div class="protection__front_star2 star"></div>
               <div class="protection__front_star3 star"></div>
