--- a/index.html
+++ b/index.html
@@ -65,15 +65,16 @@
       </section>
       <section class="safety">
         <article class="info-safety">
-          <div class="description">
-            <h1 class="description__title">Самый безопасный автомобиль в мире</h1>
-            <p class="description__text"> Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-&nbsp;либо испытанного, и установила рекорд по
+          <div class="opa">
+            <div class="description">
+              <h1 class="description__title">Самый безопасный автомобиль в мире</h1>
+              <p class="description__text"> Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-&nbsp;либо испытанного, и установила рекорд по
               наименьшей вероятности травмы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
-          </div>
+            </div>
           <div class="protection">
             <div class="protection__title"></div>
             <div class="protection__front">
-              <div class="protection__front_title"></div>
+              <div class="protection__front_title">СПЕРЕДИ</div>
               <div class="protection__front_star1 star"></div>
               <div class="protection__front_star2 star"></div>
               <div class="protection__front_star3 star"></div>
@@ -113,6 +114,7 @@
               <div class="protection__passangeer_star5 star"></div>
             </div>
           </div>
+        </div>
           <div class="info-safety__result"></div>
           <div class="more-safety">
             <div class="more-safety__icon"></div>
