--- a/index.html
+++ b/index.html
@@ -30,11 +30,17 @@
         <div class="main__picture"></div>
         <div class="info">
           <div class="info__spkm">
-            <div class="info__spkm_speed"></div>
-            <div class="info__spkm_km"></div>
+            <div class="info__spkm_speed">
+              <p class="sec">2,7 <span class="sec__sec">сек</span></p>
+              <p class="razgon">0-100км/час</p>
+            </div>
+            <div class="info__spkm_km">
+              <p class="km632">632 <span class="km632_km">км</span></p>
+              <p class="distance">запас хода</p>
+            </div>
           </div>
           <div class="info__more">
-            <div class="info__more_test"></div>
+            <div class="info__more_test">ТЕСТ ДРАЙВ</div>
             <button type="button" name="button" class="info__more_order" href="#">ЗАКАЗАТЬ</button>
           </div>
         </div>
@@ -52,9 +58,18 @@
                а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.</p>
           </div>
           <div class="options">
-            <div class="options__display"></div>
-            <div class="options__wifi"></div>
-            <div class="options__bag"></div>
+            <div class="options__display">
+              <h1 class="options__display_title">17 <span class="inch">дюймов</span></h1>
+              <h4 class="option__display_text">Большой дисплей</h4>
+            </div>
+            <div class="options__wifi">
+              <h1 class="options__wifi_title">Беспроводное обновление ПО</h1>
+              <h4 class="option__wifi_text">Повышенная функциональность</h4>
+            </div>
+            <div class="options__bag">
+              <h1 class="options__bag_title">894 <span class="liters">литра</span></h1>
+              <h4 class="option__bag_text">Объем грузового пространства</h4>
+            </div>
           </div>
           <div class="more">
             <div class="more__icon"></div>
@@ -115,16 +130,18 @@
             </div>
           </div>
         </div>
-          <div class="info-safety__result"></div>
+          <div class="info-safety__result">5 звезд <span class="sesurity">безопасности</span></div>
           <div class="more-safety">
             <div class="more-safety__icon"></div>
             <a class="more-safety__info" href="#">УЗНАТЬ БОЛЬШЕ</a>
             <a class="more-safety__order" href="#">ЗАКАЗАТЬ</a>
           </div>
+          <div class="WHS">
+            <h3 class="WHS__title">РАЗРАБОТАНО В</h3>
+            <h1 class="WHS__text">WEB HERO</h1>
+            <h3 class="WHS__school">School</h3>
+          </div>
         </article>
-        <!--<div class="test">
-          <div class="safety__img"></div>
-        </div>-->
       </section>
     </section>
   </body>
