--- a/index.html
+++ b/index.html
@@ -138,10 +138,13 @@
           </div>
           <div class="WHS">
             <h3 class="WHS__title">РАЗРАБОТАНО В</h3>
-            <h1 class="WHS__text">WEB HERO</h1>
+            <h1 class="WHS__text">WebHero</h1>
             <h3 class="WHS__school">School</h3>
           </div>
         </article>
+        <div class="safety__img">
+          <img src="img/Carframegroup.svg" alt="" class="safety__img_img">
+        </div>
       </section>
     </section>
   </body>
