--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="info__more">
-            <div class="info__more_test">ТЕСТ ДРАЙВ</div>
+            <a class="info__more_test">ТЕСТ ДРАЙВ</a>
             <button type="button" name="button" class="info__more_order" href="#">ЗАКАЗАТЬ</button>
           </div>
         </div>
