--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="more-safety">
             <div class="more-safety__icon"></div>
             <a class="more-safety__info" href="#">УЗНАТЬ БОЛЬШЕ</a>
-            <a class="more-safety__order" href="#">ЗАКАЗАТЬ</a>
+            <button class="more-safety__order" href="#">ЗАКАЗАТЬ</button>
           </div>
           <div class="WHS">
             <h3 class="WHS__title">РАЗРАБОТАНО В</h3>
